# sparql.hs

./: .gitignore  LICENSE  Sparql1.hs  Sparql2.hs  sparql.cabal  stack.yaml
