name:                sparql
version:             0.1.0.0
synopsis:            Sparql
description:         Sparql experiments
homepage:            markwatson.com
license:             Apache2
license-file:        LICENSE.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           2013-2015 Mark Watson  
category:            Research
build-type:          Simple
cabal-version:       >=1.10

executable sparql1
  ghc-options:         
  hs-source-dirs:      .
  main-is:             Sparql1.hs
  build-depends:       base, rdf4h, hsparql
  default-language:    Haskell2010
  
